--- a/Server/package.json
+++ b/Server/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "server",
+  "name": "webpos",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"server"
   },
   "keywords": [],
-  "author": "",
+  "author": "Krishna",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
